--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,9 +9,20 @@
     enabled=yes
   sudo: yes
 
+- name: Setup Ports
+  template:
+    src=ports.conf.j2
+    dest=/etc/apache2/ports.conf
+    mode=0644
+  sudo: yes
+  notify: apache-restart
+
 - name: Enable required modules
   command:
     a2enmod {{ item }}
   sudo: yes
   with_items: modules.required
   notify: apache-restart
+
+- name: Adding/removing Apache virtual hosts
+  include: vhost.yml
