--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,32 +1,31 @@
 ---
 settings:
-    ports:
-        - 80
-    ssl_ports:
-        - 443
-    listen:
-        - '*:80'
-    log_level: 'warn'
+  ports:
+    - 80
+  ssl_ports:
+    - 443
+  listen:
+    - '*:80'
+  log_level: 'warn'
 modules:
-    required:
-      - rewrite
-
-vhosts:
-    default_site:
-        enabled: no
-        domain: example.com
-        aliases:
-            - dev.example.com
-            - local.example.com
-        doc_root: /var/www/html
-        settings: |
-          <Directory {{ doc_root }}>
-            Options Indexes FollowSymLinks MultiViews
-            AllowOverride All
-            Require all granted
-          </Directory>
-          <IfModule proxy_http_module>
-            ProxyPass /Content http://localhost:8080/
-            ProxyPassReverse /Content http://localhost:8080/
-          </IfModule>
-          Alias /Content2 /var/www/content2
+  required:
+    - rewrite
+apache_vhosts:
+  default_site:
+    enabled: no
+    domain: example.com
+    aliases:
+      - dev.example.com
+      - local.example.com
+    doc_root: /var/www/html
+    settings: |
+      <Directory /var/www/html>
+        Options Indexes FollowSymLinks MultiViews
+        AllowOverride All
+        Require all granted
+      </Directory>
+      <IfModule proxy_http_module>
+        ProxyPass /Content http://localhost:8080/
+        ProxyPassReverse /Content http://localhost:8080/
+      </IfModule>
+      Alias /Content2 /var/www/content2
