--- a/tasks/vhost.yml
+++ b/tasks/vhost.yml
@@ -1,37 +1,44 @@
 ---
 - name: Disabling virtual hosts
   command:
-    a2dissite {{ item.key }}.conf
-    removes=/etc/apache2/sites-enabled/{{ item.key }}.conf
-  with_dict: vhosts
-  sudo: yes
+    a2dissite "{{ item.key }}.conf"
+  args:
+    removes: "/etc/apache2/sites-enabled/{{ item.key }}.conf"
+  with_dict: "{{ apache_vhosts }}"
+  become: yes
+  become_method: sudo
   notify: apache-reload
   when: "not item.value.enabled|bool"
 
 - name: Removing virtual hosts
   command:
     rm /etc/apache2/sites-available/{{ item.key }}.conf
-    removes=/etc/apache2/sites-available/{{ item.key }}.conf
-  with_dict: vhosts
-  sudo: yes
+  args:
+    removes: "/etc/apache2/sites-available/{{ item.key }}.conf"
+  with_dict: "{{ apache_vhosts }}"
+  become: yes
+  become_method: sudo
   notify: apache-reload
   when: "not item.value.enabled|bool"
 
 - name: Adding virtual hosts
   template:
     src=vhost.conf.j2
-    dest=/etc/apache2/sites-available/{{ item.key }}.conf
+    dest="/etc/apache2/sites-available/{{ item.key }}.conf"
     mode=0644
-  with_dict: vhosts
-  sudo: yes
+  with_dict: "{{ apache_vhosts }}"
+  become: yes
+  become_method: sudo
   notify: apache-reload
   when: item.value.enabled|bool
 
 - name: Enabling virtual hosts
   command:
     a2ensite {{ item.key }}.conf
-    creates=/etc/apache2/sites-enabled/{{ item.key }}.conf
-  with_dict: vhosts
-  sudo: yes
+  args:
+    creates: "/etc/apache2/sites-enabled/{{ item.key }}.conf"
+  with_dict: "{{ apache_vhosts }}"
+  become: yes
+  become_method: sudo
   notify: apache-reload
   when: item.value.enabled|bool
